# skeletal_structures

./: Cargo.toml  LICENSE  README.md
example/: computation_time_2.rs
src/: lib.rs
src/graph_structure/: mod.rs
src/graph_structure/simplicial2/: iter_diagram_cell_2.rs  iter_diagram_halfedge_2.rs  iter_diagram_node_2.rs  iter_halfedge_2.rs  iter_node_2.rs  mod.rs  simplicial_2.rs  simplicial_2_build.rs  simplicial_2_quality.rs  unit_tests.rs
src/graph_structure/simplicial2/functions/: mod.rs  simplicial_2_quality_check.rs
src/graph_structure/simplicial2/structure/: iter_cell_2.rs  iter_cell_node_2.rs  iter_halfedge_2.rs  iter_triangle_2.rs  mod.rs  simplicial_2.rs  simplicial_2_update.rs
src/graph_structure/simplicial3/: mod.rs  unit_tests.rs
src/graph_structure/simplicial3/functions/: mod.rs  simplicial_3_quality_check.rs
src/graph_structure/simplicial3/structure/: bowyer_watson_inserter.rs  build_simplicial_3.rs  iter_halfedge_3.rs  iter_halftriangle_3.rs  iter_node_3.rs  mod.rs  (+2 more)
src/mesh3d/: mod.rs  unit_tests.rs
src/mesh3d/functions/: io.rs  mesh_quality_check.rs  mod.rs
src/mesh3d/structure/: iter_face.rs  iter_halfedge.rs  iter_vertex.rs  manifold_triangular_mesh3d.rs  mod.rs  property_set.rs
src/mesh_structure/: mod.rs
src/mesh_structure/mesh3d/: io.rs  mesh3d.rs  mod.rs  unit_tests.rs
src/mesh_structure/skeleton2d/: io.rs  mod.rs  skeleton2d.rs
src/simplicial2/: unit_tests.rs
src/simplicial2/functions/: simplicial_2_quality_check.rs
src/simplicial2/structure/: iter_cell_halfedge_2.rs  iter_node_2.rs  mod.rs  simplicial_2.rs
(+2 files in other folders)
