[package]
name = "skeletal_structures"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "skeletal_structures"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.66"
log = "0.4.22"
nalgebra = "0.32.5"
ply-rs = "0.1.3"

[dev-dependencies]
env_logger="0.10.0"
rand = "0.8.5"
ctor = "0.2.6"
